--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+ * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -9,10 +9,10 @@
     font-weight: normal;
     font-style: normal;
 }
-/*body {
+body {
     font-family: 'PT Sans', sans-serif;
     margin: 0;
-}*/
+}
 header {
     width: 100%;
     height: 230px;
@@ -29,11 +29,8 @@ header {
     position: relative;
     border: 1px solid black;
 }
-.header-container__logo {
-    margin-left: 0px;
-}
 .header-container__company-name {
-    margin-left: 10px;
+    left: 10px;
     line-height: 0.8;
     position: relative;
     display: flex;
@@ -46,8 +43,9 @@ header {
     margin-top: -10px;
 }
 .header-container__feedback {
-    margin-left: auto;
-    margin-bottom: 35px;
+    position: absolute;
+    right: 0;
+    top: 35px;
 }
 .header-container__phone-numbers {
     list-style:none;
@@ -59,13 +57,95 @@ header {
     font-family: 'PT Sans Narrow', sans-serif;
     color: gray;
 } 
-.header-container__feedback-button {
-    background-color: lightgray; 
+
+.header-container__feedback-button{
     border: none; 
+    background-color:lightgrey;
     color: #fff; 
-    padding: 0;
-    text-decoration: none; /* add dashed border*/
-    cursor: pointer; 
+    position: absolute;
+    right: auto;
+    text-decoration: none;  
     font-size: 23px;
-    text-align: right;
+    margin-left: auto;
+}
+
+.feedback__form {
+    padding: 46px;
+    margin-top: -45px;
+}
+
+ Стилі для кожного полі 
+.feedback__form-group {
+    margin-bottom: 20px;
+    text-align: center; 
+}/* Вирівнювання тексту по центру */
+
+.feedback__label {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 14px;
+}
+
+.feedback__input,
+.feedback__textarea {
+    width: calc(100% - 40px); 
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 0;
+}
+
+
+.feedback__submit {
+    padding: 10px 20px;
+    border-radius: 0;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+.feedback__submit:hover {
+    background-color: #0056b3;
+}
+
+#feedbackModal .modal-dialog {
+    margin-top: 130px;
+}
+#feedbackModal .modal-dialog {
+    max-width: none;
+    width: 505px;
+    margin-top: 130px;
+}
+
+#feedbackModal .modal-content {
+    height: 580px;
+    margin-left: 39px;
+}
+.form-control,
+.btn {
+    border-radius: 0; 
+}
+.modal-title,
+.feedback__label {
+    text-align: center;
+}
+
+.close-button {
+    position: absolute;
+    top: 120px;
+    right: -28px;
+    width: 30px;
+    height: 30px;
+    background-color: #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.close {
+    background-color: white;
+}
+.submit{
+    display: flex;
+    width: 50px;
+    height: 40px;
 }
