--- a/style.css
+++ b/style.css
@@ -22,9 +22,11 @@ header {
 .header-container { 
     width: 980px;
     height: 100%;
-    max-width: 1000px;
+    max-width: 100%;
+    
     margin: 0 auto;
     display: flex;
+    flex-direction: row;
     align-items: center;
     position: relative;
     border: 1px solid black;
@@ -41,7 +43,7 @@ header {
 }
 .header-container__company-name h1{
     margin-top: -10px;
-    line-height: 0.8;
+    line-height: 0.7;
     font-size: 33px;
 }
 .header-container__feedback {
@@ -78,26 +80,29 @@ header {
  .feedback__form-group {
     margin-bottom: 20px;
     text-align: center; 
+    border-color: white;
 }
 
 .feedback__label {
     display: block;
     margin-bottom: 5px;
-    font-size: 14px;
+    font-size: 12px;
+    font-weight: normal;
+
 }
 .modal-title {
     font-size: 22px;
-    border: 1px black solid;
 }
 
 .feedback__input,
 .feedback__textarea {
-    border: 3px solid black;
     border-radius: 0;
     margin-left: 3px;
+    padding: 0px 10px;
 }
 .feedback__input{
     height: 40px;
+   
 }
 
 
@@ -158,7 +163,7 @@ header {
     right: -28px;
     width: 28px;
     height: 28px;
-    background-color: #ccc;
+    background-color: darkgray;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -170,11 +175,84 @@ header {
 /*idk mb i can create form without dividing*/
 .modal-top
 .modal-main
-.modal-bottom{
+.modal-bottom {
     border: 0;
     outline: 0; 
 }
 .modal-content{
     border: 0;
     outline: 0;
+}
+.btn__feedback__submit{
+   margin-top: 35px;
+    width: 130px;
+}
+
+
+
+
+/* Для маленьких екранів */
+@media (max-width: 576px) {
+    header{
+        height: 150px;
+    }
+    .header-container__logo img{
+        max-height: 70px;
+        max-width: 70px;
+    }
+    .header-container__company-name p{
+        margin-top: 5px;
+        font-size: 12px;
+    }
+    .header-container__company-name h1{
+        margin-top: -10px;
+        line-height: 0.7;
+        font-size: 20px;
+    }
+    .header-container__feedback {
+        position: absolute;
+        right: 0;
+        top: 35px;
+    }
+    .header-container__phone-numbers {
+        list-style:none;
+        margin-bottom: 10px;
+    }
+    .header-container__phone-numbers a {
+        text-decoration: none;
+        font-size: 15px;
+        font-family: 'PT Sans Narrow', sans-serif;
+        color: gray;
+    } 
+    
+    .header-container__feedback-button{
+        border: none; 
+        background-color:lightgrey; 
+        position: absolute;
+        right: 0;
+        color: gray;
+        bottom: -15px;
+        text-decoration: none;  
+        font-size: 13px;
+        margin-left: auto;
+        border: none;
+        text-decoration: underline dashed;
+    }
+}
+/* Для середніх екранів */
+@media (min-width: 577px) and (max-width: 992px) {
+    .header-container__phone-numbers a {
+        font-size: 25px;
+    } 
+    .header-container__feedback-button{
+        font-size: 18px;
+    }
+    .header-container__feedback {
+        top: 50px;
+    }
+}
+
+/* Для великих екранів */
+@media (min-width: 993px) {
+    
 }
