--- a/style.css
+++ b/style.css
@@ -14,21 +14,19 @@ body {
     margin: 0;
 }
 header {
-    width: 100%;
+    max-width: 100%;
     height: 230px;
     background-color: lightgray;
     position: sticky;
 }
 .header-container { 
-    width: 980px;
+    max-width: 980px;
     height: 100%;
-    max-width: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     position: relative;
-    border: 1px solid black;
 }
 .header-container__company-name {
     left: 10px;
@@ -39,11 +37,13 @@ header {
 }
 .header-container__company-name p {
     margin-top: 15px;
+    color: gray;
 }
 .header-container__company-name h1 {
     margin-top: -10px;
     line-height: 0.7;
     font-size: 33px;
+    color: gray;
 }
 .header-container__feedback {
     position: absolute;
@@ -166,6 +166,148 @@ header {
 .error-message {
     display: none; 
 }
+/*Menu*/
+.menu__desktop-menu{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    padding: 10px 0;
+    background-color: gray;
+    color: #fff;
+    height: 80px;
+}
+.menu__desktop-menu a{
+    text-align: center;
+}
+.desktop-menu-item {
+    text-decoration: none;
+    color: #fff;
+    margin: 0 5px;
+    font-size: 30px;
+    text-align: center;
+    margin: 0 10px;
+}
+@media (max-width: 864px) {
+    .desktop-menu-item {
+        font-size: 20px;
+    }
+    .menu__desktop-menu{
+        height: 60px;
+    }
+}
+.desktop-menu-item:hover {
+    text-decoration: underline; 
+}
+@media (max-width: 768px) {
+    .desktop-menu-item{
+        display: none;
+    }
+}
+@media (min-width: 768px) {
+    .hamburger-menu{
+        display: none;
+    } 
+}
+
+/*for burger*/
+#menu__toggle {
+    opacity: 0;
+}
+
+#menu__toggle:checked + .menu__btn > span {
+    transform: rotate(45deg);
+}
+
+#menu__toggle:checked + .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+}
+
+#menu__toggle:checked + .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+}
+
+.hamburger-menu #menu__toggle:checked ~ .mobile-menu {
+    visibility: visible;
+    left: 0;
+}
+
+.menu__btn {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 245px;
+    left: 20px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: lightgray;
+    transition-duration: .25s;
+}
+
+.menu__btn > span::before {
+    content: '';
+    top: -8px;
+}
+
+.menu__btn > span::after {
+    content: '';
+    top: 8px;
+}
+.mobile-menu a{
+    color: gray;
+    font-size: 15px; 
+}
+.mobile-menu li {
+    margin-bottom: 9px;
+}
+.mobile-menu {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 210px;
+    left:100px;
+    width: 30%;
+    height: 20%;
+    margin: 0;
+    padding: 10px 0;
+    list-style: none;
+    background-color: lightgray;
+    transition-duration: .25s;
+}
+@media (max-width: 418px){
+    .mobile-menu a{
+        color: gray;
+        font-size: 12px; 
+    }
+    .mobile-menu {
+        height: 22%;
+    }
+}
+.menu__item {
+    display: block;
+    padding: 20px 24px;
+    color: gray;
+    font-family:'PT Sans Narrow', sans-serif;
+    font-weight: 500;
+    text-decoration: none;
+    transition-duration: .25s;
+}
+
+.menu__item:hover {
+    background-color: #CFD8DC;
+}
 /*adaptive*/
 @media (max-width: 576px) {
     header{
@@ -225,6 +367,9 @@ header {
         margin-top: 20px;
          width: 130px;
      }    
+    .menu__btn{
+        top: 165px
+    }
 }
 
 @media (min-width: 577px) and (max-width: 992px) {
@@ -237,9 +382,8 @@ header {
     .header-container__feedback {
         top: 50px;
     }
+
 }
 
-@media (min-width: 993px) {
-}
 
 
