--- a/style.css
+++ b/style.css
@@ -345,7 +345,81 @@ header {
 .menu__item:hover {
     background-color: #CFD8DC;
 }
+main {
+    max-width: 100%;
+    border: 1px solid black;
+    margin-top: -30px;
+}
+.container-fluid{
+    max-width: 980px;
+    border: 1px solid black;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}   
+.content{
+    height:790px;
+}
+/*Category*/
 
+.categories-menu{
+  max-width:175px;  
+  margin-left: 15px; 
+  border: 1px solid black;
+  margin-top: 30px;
+}
+
+.categories li{
+    font-size: 16px;
+    margin-bottom: 9px;
+    list-style-type: none;
+}
+.sub-categories li{
+    font-size: 12px;
+    margin-bottom: 5px;
+    margin-left: 20px;
+}
+.categories a,
+.categories a:hover{
+    color: gray;
+}
+.items-boxes{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 780px;
+    align-items: flex-start;
+    margin-top: 30px;
+}
+.item-box{
+    width: 250px;
+    border: 1px solid black;
+    flex-direction: column;
+    display: flex;
+    margin-bottom: 20px;
+}
+figure{
+    border: 1px solid black;
+    height: 380px;
+    background-color: lightgrey;
+    display: flex;
+    justify-content: center;
+}
+figure img{
+    width:210px;
+    margin: 20px 20px 0px 20px;
+    
+}
+figcaption{
+    margin:20px 20px 0px 20px;
+}
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 2
+}
 @media (max-width: 576px) {
     header{
         height: 150px;
