--- a/style.css
+++ b/style.css
@@ -351,11 +351,11 @@ main {
     margin-top: -30px;
 }
 .container-fluid{
-    max-width: 980px;
+    max-width: 1100px;
     border: 1px solid black;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    padding: 0%;
 }   
 .content{
     height:790px;
@@ -363,14 +363,13 @@ main {
 /*Category*/
 
 .categories-menu{
-  max-width:175px;  
-  margin-left: 15px; 
-  border: 1px solid black;
-  margin-top: 30px;
+  width: 180px;  
+  margin-left: 75px; 
+  margin-top: 35px;
 }
 
 .categories li{
-    font-size: 16px;
+    font-size: 18px;
     margin-bottom: 9px;
     list-style-type: none;
 }
@@ -385,21 +384,21 @@ main {
 }
 .items-boxes{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 780px;
+    flex-wrap: wrap;  
+    max-width: 850px;
     align-items: flex-start;
-    margin-top: 30px;
+    margin-top: 40px;
+    padding: 0;
+    margin-left: 30px;
 }
 .item-box{
     width: 250px;
-    border: 1px solid black;
     flex-direction: column;
     display: flex;
+    margin-right: 15px;
     margin-bottom: 20px;
 }
 figure{
-    border: 1px solid black;
     height: 380px;
     background-color: lightgrey;
     display: flex;
@@ -408,7 +407,6 @@ figure{
 figure img{
     width:210px;
     margin: 20px 20px 0px 20px;
-    
 }
 figcaption{
     margin:20px 20px 0px 20px;
@@ -420,6 +418,24 @@ figcaption{
   'GRAD' 0,
   'opsz' 2
 }
+.figcaption-title {
+    font-size: 16px;
+    margin-top: -10px;
+    color: gray;
+  }
+  .figcaption-price {
+    font-size: 25px;
+    color: gray;
+    font-weight: bold;
+    margin-top: 40px;
+  }
+  .material-symbols-outlined{
+    float: right;
+    color: white;
+    margin-bottom: 10px;
+    margin-right: 15px;
+  }
+
 @media (max-width: 576px) {
     header{
         height: 150px;
