--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@ header {
     align-items: center;
     position: relative;
 }
+@media (max-width:988px) {
+    .header-container{
+        padding: 0px 30px;
+    }
+   
+}
 .header-container__company-name {
     left: 10px;
     line-height: 0;
@@ -346,32 +352,35 @@ header {
     background-color: #CFD8DC;
 }
 main {
-    max-width: 100%;
-    max-height: 100%;
-    border: 1px solid black;
     margin-top: -30px;
+    height: 1380px;
 }
 .container-fluid{
     max-width: 1100px;
-    border: 1px solid black;
+    max-height: 800px;
     margin: 0 auto;
     display: flex;
     padding: 0%;
 }   
 .content{
-    height:790px;
+    max-height:790px;
+}
+.cat-breadcrumbs{
+    display: inline-block;
+    margin-left: 420px;
+}
+.cat-breadcrumbs a{
+    color: gray;
 }
 /*Category*/
 .container-left{
-    width: 220px;  
+    max-width: 220px;  
     margin-left: 55px; 
-    margin-top: 35px;
+    margin-top: 10px;
     margin-right: -20px;
-    border: 1px solid black; 
 }
 .categories-menu{
   max-width: 180px;  
-  border: 1px solid black;
 }
 
 .categories li{
@@ -383,6 +392,7 @@ main {
     font-size: 12px;
     margin-bottom: 5px;
     margin-left: 30px;
+    list-style-type: disc;
 }
 .categories a,
 .categories a:hover{
@@ -396,21 +406,21 @@ main {
     box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.5);
 }
 .logo-x-caption p{
-font-size:28px;
-margin-top: 15px;
-margin-left: -28px;
+    font-size:28px;
+    margin-top: 15px;
+    margin-left: -28px;
 }
 .items-boxes{
     display: flex;
     flex-wrap: wrap;  
     max-width: 850px;
     align-items: flex-start;
-    margin-top: 40px;
+    margin-top: 15px;
     padding: 0;
     margin-left: 20px;
 }
 .item-box{
-    width: 250px;
+    max-width: 250px;
     flex-direction: column;
     display: flex;
     margin-right: 5px;
@@ -418,7 +428,7 @@ margin-left: -28px;
     margin-left:10px;
 }
 figure{
-    height: 380px;
+    max-height: 380px;
     background-color: lightgrey;
     display: flex;
     justify-content: center;
@@ -454,7 +464,90 @@ figcaption{
     margin-bottom: 10px;
     margin-right: 15px;
   }
+ .main-info{
+    max-width: 780px;
+    max-height: 350px;
+    margin: 0 auto;
+    left:100px;
+    padding-top: 110px;
+    align-items: center;
+    position: relative;
+    display: flex;
+ }
+.main-info-blocks{
+    border-top: 1px solid black;
+    column-count: 2;
+    column-gap: 30px;
+    padding-top: 25px;
+}
+.main-info-blocks p{
+    color: gray;
+}
 
+footer{
+    max-width: 100%;
+    height: 240px; 
+    bottom: 0;
+}
+.container-footer{
+    max-height: 220px;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: auto;
+    background-color:gray;
+    display: flex;
+    align-items: center;
+}
+.footer-content{
+    height: 220px;
+    max-width: 1000px;
+    width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    padding: auto;
+    position: relative;
+    color: white;
+}
+
+.footer-info,
+.footer-menu,
+.footer-logo,
+.prod {
+    font-size: 14px;
+}
+.footer-info{
+    text-align: left;
+    top: -10px;
+    position: absolute;
+    top:40px;
+    left: 10px;
+}
+.footer-menu {
+    position: absolute;
+    left: 360px;
+    top: 40px;
+}
+.footer-menu a {
+    color: white;
+}
+.footer-menu li {
+    list-style-type: none;
+    margin-bottom: 5px;
+}
+.footer-logo{
+    position: absolute;
+    right: 190px;
+    top: 40px;
+}
+.prod{
+    position: absolute;
+    right: 25px;
+    top: 40px;
+}
+.footer-menu a:hover {
+    text-decoration: underline;
+}
 @media (max-width: 576px) {
     header{
         height: 150px;
