--- a/style.css
+++ b/style.css
@@ -321,21 +321,20 @@ header {
     justify-content: center; 
     align-items: center; 
   }
-  
   .slider {
-    width: 100%; 
+    width: 980px; 
     display: flex; 
     overflow: hidden;
-    height: 43vh;
+    height: 400px;
   }
   .slider div {
     width: 100%;
     text-align: center; 
   }
   .slider img {
-    max-width: 100%;
-    margin: 0 auto; 
-    max-height: auto;
+    width: 100%;
+    height: 100%; 
+    object-fit: cover;
   }
   
 .menu__item {
