--- a/style.css
+++ b/style.css
@@ -312,6 +312,7 @@ header {
 }
 .slider-box {
     width: 100%;
+    height: 400px;
     overflow: hidden;
     position: relative; 
   }
@@ -320,21 +321,22 @@ header {
     display: flex;
     justify-content: center; 
     align-items: center; 
+    height: 400px;
   }
   .slider {
     width: 980px; 
     display: flex; 
     overflow: hidden;
     height: 400px;
-  }
-  .slider div {
+    border: 1px solid black;
+}
+  .slider-item {
     width: 100%;
     text-align: center; 
   }
-  .slider img {
+  .slider-item img {
     width: 100%;
     height: 100%; 
-    object-fit: cover;
   }
   
 .menu__item {
