--- a/style.css
+++ b/style.css
@@ -314,31 +314,40 @@ header {
     width: 100%;
     height: 400px;
     overflow: hidden;
-    position: relative; 
-  }
-  
-  .content-slider {
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    height: 400px;
-  }
-  .slider {
-    width: 980px; 
-    display: flex; 
-    overflow: hidden;
-    height: 400px;
-    border: 1px solid black;
+    position: relative;
+    display: flex; /* Додаємо flex-контейнер */
+    justify-content: center; /* Центруємо по горизонталі */
+    margin-bottom: 30px;
 }
-  .slider-item {
+
+.content-slider {
+    display: flex;
+    overflow: hidden;
+    height: 100%;
+}
+
+.slider {
+    display: flex;
+    transition: transform 0.5s ease;
+    width: 1400px; /* Змінено на ширину контенту */
+    max-width: 100%; /* Додаємо для адаптивності */
+}
+
+.slider-item {
+    flex: 0 0 100%; /* Змінено на 100% */
+    text-align: center;
+}
+
+.slider-item img {
     width: 100%;
-    text-align: center; 
-  }
-  .slider-item img {
-    width: 100%;
-    height: 100%; 
-  }
-  
+    height: 100%;
+    object-fit: cover;
+}
+@media (max-width: 576px) {
+    .slider-box {
+        height: 200px;
+    }
+}
 .menu__item {
     display: block;
     padding: 20px 24px;
