--- a/style.css
+++ b/style.css
@@ -31,8 +31,12 @@ header {
 @media (max-width:988px) {
     .header-container{
         padding: 0px 30px;
+    } 
+}
+@media (max-width:576px) {
+    .header-container__feedback{
+        margin-right: 30px;
     }
-   
 }
 .header-container__company-name {
     left: 10px;
@@ -66,7 +70,6 @@ header {
     font-family: 'PT Sans Narrow', sans-serif;
     color: gray;
 } 
-
 .header-container__feedback-button {
     border: none; 
     background-color:lightgrey; 
@@ -90,12 +93,10 @@ header {
     margin-bottom: 5px;
     font-size: 12px;
     font-weight: normal;
-
 }
 .modal-title {
     font-size: 22px;
 }
-
 .feedback__input,
 .feedback__textarea {
     border-radius: 0;
@@ -105,7 +106,6 @@ header {
 .feedback__input{
     height: 40px;
 }
-
 .btn__feedback__submit {
     padding: 10px 10px;
     border-radius: 0;
@@ -120,7 +120,6 @@ header {
     align-items: center;
     top: -40px;
 }
-
 #feedbackModal .modal-dialog {
     max-width: none;
     margin-top: 130px;
@@ -130,7 +129,6 @@ header {
     width: 505px;
     top:10px;
 }
-
 #feedbackModal .modal-content {
     margin-left: 39px;
     width: 505px;
@@ -172,7 +170,6 @@ header {
 .error-message {
     display: none; 
 }
-/*Menu*/
 .menu__desktop-menu{
     align-items: center;
     justify-content: center;
@@ -222,7 +219,6 @@ header {
         display: none;
     } 
 }
-
 /*for burger*/
 #menu__toggle {
     opacity: 0;
@@ -247,7 +243,7 @@ header {
     left: 0;
 }
 
-.menu__btn {
+.menu__btn  {
     display: flex;
     align-items: center;
     position: fixed;
@@ -290,11 +286,9 @@ header {
     display: block;
     position: fixed;
     visibility: hidden;
-    top: 210px;
     left:100px;
     width: 30%;
     height: 20%;
-    margin: 0;
     padding: 10px 0;
     list-style: none;
     background-color: lightgray;
@@ -362,19 +356,17 @@ header {
     background-color: #CFD8DC;
 }
 main {
+    position: relative;
     margin-top: -30px;
     height: 1380px;
 }
 .container-fluid{
     max-width: 1100px;
-    max-height: 800px;
     margin: 0 auto;
     display: flex;
     padding: 0%;
 }   
-.content{
-    max-height:790px;
-}
+
 .cat-breadcrumbs{
     display: inline;
 }
@@ -390,9 +382,8 @@ main {
     margin-right: -20px;
 }
 .categories-menu{
-  max-width: 180px;  
+    max-width: 180px;  
 }
-
 .categories li{
     font-size: 18px;
     margin-bottom: 9px;
@@ -424,7 +415,7 @@ main {
     display: flex;
     flex-wrap: wrap;  
     max-width: 850px;
-    align-items: flex-start;
+    max-height: max-content;
     margin-top: 60px;
     padding: 0;
     margin-left: 20px;
@@ -451,111 +442,97 @@ figcaption{
     margin:20px 20px 0px 20px;
 }
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 2
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 2
 }
 .figcaption-title {
     font-size: 16px;
     margin-top: -10px;
     color: gray;
-  }
-  .figcaption-price {
+}
+.figcaption-price {
     font-size: 25px;
     color: gray;
     font-weight: bold;
     margin-top: 40px;
-  }
-  .material-symbols-outlined{
+}
+.material-symbols-outlined{
     float: right;
     color: white;
     margin-bottom: 10px;
     margin-right: 15px;
-  }
-/* Стилі для десктопної версії */
+}
+@media (max-width: 576px) {
+    .items-boxes{
+        margin-top: 0px;
+        margin-left: -10px;
+    }
+}
 .categories {
     display: block;
 }
 
-/* Стилі для мобільної версії (екран менше 900px) */
 @media (max-width: 900px) {
     .categories,
     .cat-breadcrumbs,
     .logo-x {
-        display: none; /* Приховуємо головне меню категорій */
+        display: none; 
     }
-
-    /* Ваші стилі для кнопки тут */
-    #menuToggle {
-        /* Ваші стилі для кнопки тут */
+}
+@media (min-width: 900px) {
+    nav[role="navigation"] {
+        display: none;
     }
 }
 #menuToggle {
-  display: block;
-  position: relative;
-  top: 50px;
-  left: 50px;
-  z-index: 1;
-  -webkit-user-select: none;
-  user-select: none;
+    display: block;
+    position: relative;
+    top: 50px;
+    left: 0px;
+    z-index: 1;
+    -webkit-user-select: none;
+    user-select: none;
 }
-#menuToggle a
-{
-  text-decoration: none;
-  color: #232323;
-  
-  transition: color 0.3s ease;
+#menuToggle a {
+    text-decoration: none;
+    color: #232323;
+    transition: color 0.3s ease;
 }
-
-#menuToggle input
-{
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-  
-  cursor: pointer;
-  
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-  
-  -webkit-touch-callout: none;
+#menuToggle input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0; /* hide this */
+    z-index: 2; /* and place it over the hamburger */
+    -webkit-touch-callout: none;
 }
-
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-{
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  
-  background: #cdcdcd;
-  border-radius: 3px;
-  
-  z-index: 1;
-  
-  transform-origin: 4px 0px;
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
+#menuToggle span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: gray;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
 }
 
-#menuToggle span:first-child
-{
+#menuToggle span:first-child{
   transform-origin: 0% 0%;
 }
 
-#menuToggle span:nth-last-child(2)
-{
+#menuToggle span:nth-last-child(2){
   transform-origin: 0% 100%;
 }
 
@@ -563,69 +540,73 @@ figcaption{
  * Transform all the slices of hamburger
  * into a crossmark.
  */
-#menuToggle input:checked ~ span
-{
+#menuToggle input:checked ~ span{
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
   background: #232323;
 }
-
 /*
  * But let's hide the middle one.
  */
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
+#menuToggle input:checked ~ span:nth-last-child(3){
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
-
 /*
  * Ohyeah and the last one should go the other direction
  */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
+#menuToggle input:checked ~ span:nth-last-child(2){
   transform: rotate(-45deg) translate(0, -1px);
 }
-
 /*
  * Make this absolute positioned
  * at the top left of the screen
  */
-#menu
-{
+#menu{
   position: absolute;
   width: 300px;
   margin: -100px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
-  
   background: #ededed;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
-  
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
-  
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
-#menu li
-{
+#menu li{
   padding: 10px 0;
   font-size: 22px;
 }
-
 /*
  * And let's slide it in from the left
  */
-#menuToggle input:checked ~ ul
-{
+#menuToggle input:checked ~ ul{
   transform: none;
 }
-  
-
-
+@media (max-width: 991px){
+    .main-info,
+    .main-info-blocks {
+        display: none;
+    }
+}
+@media (max-width: 576px) {
+    #menuToggle{
+        left: -40px;
+        top: -20px;
+    }
+    #menu {
+        top: 85px;
+        margin-left: -55px;
+        padding: 60px;
+    }
+    .container-footer{
+       margin-bottom: -100;
+    }
+}
  .main-info{
     max-width: 780px;
     max-height: 350px;
@@ -646,9 +627,19 @@ figcaption{
     color: gray;
 }
 
+@media(max-width: 618px) {
+    main{
+        margin-bottom: 650px;
+    }
+}
+@media (max-width: 576px) {
+.main-info {
+    display: none;
+}
+}
 footer{
     max-width: 100%;
-    height: 240px; 
+    max-height: 240px;
     bottom: 0;
 }
 .container-footer{
@@ -709,6 +700,31 @@ footer{
 }
 .footer-menu a:hover {
     text-decoration: underline;
+}
+@media(max-width: 710px) {
+    .footer-menu{
+        display: none;
+    }
+    .container-footer{
+        padding: 30px;
+    }
+}
+@media(max-width: 576px) {
+    .footer-logo{
+        left: 0;
+        top: 100px;
+    }
+    .prod{
+        left: 50px;
+        top: 100px;
+    }
+}
+@media (max-width: 618px) {
+    footer {
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
 }
 @media (max-width: 576px) {
     header{
@@ -787,6 +803,3 @@ footer{
     top:290px;
     }
 }
-
-
-
